<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_standard">

    <TextView
        android:id="@+id/display1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/display_height"
        android:gravity="center"
        android:text="@string/CalTxt"
        android:textSize="@dimen/text_size_large"
        android:padding="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/margin_standard" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/display2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/display_height"
        android:gravity="end"
        android:text="@string/_0"
        android:textSize="@dimen/text_size_large"
        android:padding="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/margin_standard" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="@dimen/weight_sum">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/c"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/divide"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="@dimen/weight_normal"
            android:text="@string/multiply"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/del"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="@dimen/weight_sum">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_7"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_8"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_9"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/subtract"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="@dimen/weight_sum">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_4"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_5"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_6"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/add"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="@dimen/weight_sum">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_1"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_2"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_3"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/percent"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="@dimen/weight_sum">

        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_double"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/zero"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_decimal"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/decimal"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_equals"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/equals"
            android:textSize="@dimen/text_size_medium" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="@dimen/weight_normal"
            android:layout_margin="@dimen/margin_small" />
    </LinearLayout>
</LinearLayout>